<resources>
    <string name="app_name">Simpson App Challenge</string>
    <string name="Name">Name:</string>
    <string name="LastName">LastName:</string>
    <string name="arrow">arrow</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="Bio">Bio</string>
    <string name="Url_image">URL image</string>
    <string name="Save">Save</string>
    <string name="Occupation">Occupation:</string>
    <string name="Likes">Likes:</string>
    <string name="Age">Age:</string>
    <string name="Other">Other:</string>
    <string name="character_info">Character profile</string>
    <string name="Add_character">Add character</string>

</resources>